# python-template

./: README.md  cookiecutter.json
hooks/: post_gen_project.sh
{{cookiecutter.github_repository}}/: .editorconfig  .travis.yml  README.rst  setup.cfg  setup.py
{{cookiecutter.github_repository}}/docs/: api_docs.rst  conf.py
{{cookiecutter.github_repository}}/tests/: __init__.py  test_{{cookiecutter.package_name}}.py
