[metadata]
name = {{ cookiecutter.pypi_name }}
author = {{ cookiecutter.author }}
author_email = {{ cookiecutter.author_email }}
description = {{ cookiecutter.description }}
long_description = file: README.rst
url = https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.github_repository }}
license = MIT
license_file = LICENSE
classifier =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
keywords = {{ cookiecutter.keywords }}

[options]
include_package_data = True
packages = find:
install_requires =
setup_requires =
    setuptools_scm
    sphinx
    pytest-runner
tests_require =
    pytest
    pytest-cov

[options.package_data]
* = *.txt, *.rst, *.html, *.po

[options.packages.find]
exclude =
    tests

[bdist_wheel]
universal = 1

[aliases]
test = pytest

[tool:pytest]
addopts = --cov={{ cookiecutter.package_name }} --cov-report xml

[tox:tox]
envlist = py{35,36,37},docs

[testenv]
commands = python setup.py test

[testenv:docs]
commands = python setup.py build_sphinx -W -b html -b doctest

[build_sphinx]
source-dir = docs
build-dir = docs/_build

[flake8]
max-line-length=88
exclude = venv,.tox,.eggs

[pydocstyle]
add_ignore = D1

[isort]
atomic = true
line_length = 88
known_first_party = {{ cookiecutter.package_name }}, tests
include_trailing_comma = True
default_section=THIRDPARTY
combine_as_imports = true
